# bevy-extrude-mesh

./: Cargo.toml
assets/models/: test_shape.glb  track.glb
assets/models/blend/: test_shape.blend  test_shape.blend1
examples/: interactive.rs  movement_along_curve.rs
src/: bezier.rs  extrude.rs  lib.rs
