[package]
name = "bevy_extrude_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
lerp = "0.5.0"

# Used in examples
[dev-dependencies]
bevy_mod_picking = "0.15.0"
bevy_transform_gizmo = "0.8.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam.git", branch="bevy_0.11" }
bevy_asset_loader = "0.17.0"
bevy_egui = "0.21.0"
