[package]
name = "bevy_extrude_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
lerp = "0.5.0"

# Used in examples
[dev-dependencies]
bevy_mod_picking = "0.20.1"
bevy_transform_gizmo = "0.12.0"
bevy_flycam = "0.14.1"
bevy_asset_loader = "0.21.0"
bevy_egui = "0.29.0"
